fixed text-align center inheritance in header/footer by mistake from autoWidth

--- a/Source/css/Modal.css
+++ b/Source/css/Modal.css
@@ -93,6 +93,7 @@ span.modal-close {
 }
     .modal-header, .modal-footer {
         background-color: #fff;
+        text-align: left;
         padding: 10px;
         text-shadow: 0 1px 0 #fff;
     }
